--- a/book-exchange-community/package.json
+++ b/book-exchange-community/package.json
@@ -9,16 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.37",
+    "expo-blur": "^14.0.3",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^11.3.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-reanimated": "^3.16.7",
-    "react-native-safe-area-context": "^5.2.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.8.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-dom": "18.3.1",
+    "react-native-web": "~0.19.13",
+    "@expo/metro-runtime": "~4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
