--- a/app.json
+++ b/app.json
@@ -1,14 +1,14 @@
 {
   "expo": {
-    "name": "restaurante",
-    "slug": "restaurante",
+    "name": "pedidosrest",
+    "slug": "pedidosrest",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.jpg",
+    "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/icon-splash.jpg",
+      "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -17,12 +17,12 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/icon.jpg",
+        "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       }
     },
     "web": {
-      "favicon": "./assets/icon.jpg"
+      "favicon": "./assets/favicon.png"
     }
   }
 }
