--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "restaurante",
+  "name": "pedidosrest",
   "license": "0BSD",
   "version": "1.0.0",
   "main": "index.js",
@@ -10,29 +10,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-community/masked-view": "^0.1.11",
+    "@expo/vector-icons": "^14.0.4",
+    "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
-    "expo": "^52.0.39",
+    "expo": "~52.0.37",
     "expo-status-bar": "~2.0.1",
-    "firebase": "^11.4.0",
-    "nanoid": "^5.1.4",
+    "firebase": "^11.3.1",
     "react": "18.3.1",
-    "react-native": "^0.76.7",
-    "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screen": "^1.0.1",
-    "react-native-screens": "~4.4.0",
+    "react-native": "0.76.7",
+    "react-native-gesture-handler": "^2.24.0",
+    "react-native-reanimated": "^3.17.1",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.9.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/plugin-transform-private-methods": "^7.25.9",
-    "@react-native-community/cli": "^18.0.0",
-    "metro-react-native-babel-preset": "^0.77.0"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
