--- a/package.json
+++ b/package.json
@@ -12,18 +12,21 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/native": "^7.0.15",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.1.2",
     "expo": "^52.0.39",
+    "expo-file-system": "^18.0.12",
+    "expo-image-picker": "^16.0.6",
     "expo-status-bar": "~2.0.1",
-    "firebase": "^11.4.0",
+    "firebase": "^11.6.0",
     "nanoid": "^5.1.4",
     "react": "18.3.1",
     "react-native": "^0.76.7",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screen": "^1.0.1",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0"
