build: maps implementations

--- a/book-exchange-community/app.json
+++ b/book-exchange-community/app.json
@@ -13,14 +13,18 @@
       "backgroundColor": "#011F26"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "Necesitamos tu ubicación para mostrarte libros cercanos."
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/Logo.png",
         "backgroundColor": "#011F26"
       },
-      "package": "com.anonymous.bookexchangecommunity"
+      "package": "com.anonymous.bookexchangecommunity",
+      "permissions": ["ACCESS_COARSE_LOCATION", "ACCESS_FINE_LOCATION"]
     },
     "web": {
       "favicon": "./assets/favicon.png"
