--- a/book-exchange-community/package.json
+++ b/book-exchange-community/package.json
@@ -16,16 +16,18 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
-    "expo": "~52.0.37",
+    "expo": "~52.0.46",
     "expo-blur": "^14.0.3",
     "expo-camera": "~16.0.18",
     "expo-image-picker": "~16.0.6",
+    "expo-location": "~18.0.10",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.4.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "1.18.0",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^4.0.2",
