--- a/book-exchange-community/package.json
+++ b/book-exchange-community/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
+    "axios": "^1.9.0",
     "expo": "~52.0.37",
     "expo-blur": "^14.0.3",
     "expo-camera": "~16.0.18",
