--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
-    "expo": "~52.0.0",
+    "expo": "^52.0.43",
     "expo-firebase-analytics": "~8.0.0",
     "expo-firebase-core": "~6.0.0",
     "expo-notifications": "~0.29.14",
