--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "link": "^2.1.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "4.12.0",
