--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "expo": "^52.0.43",
-    "expo-firebase-analytics": "~8.0.0",
-    "expo-firebase-core": "~6.0.0",
+    "expo-dev-client": "~5.0.20",
     "expo-notifications": "~0.29.14",
     "expo-status-bar": "~2.0.1",
     "firebase": "10.7.1",
