--- a/package.json
+++ b/package.json
@@ -5,24 +5,33 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^22.2.0",
+    "@react-native-firebase/messaging": "^22.2.0",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.1.2",
-    "expo": "^52.0.39",
+    "expo": "~52.0.46",
+    "expo-build-properties": "~0.13.3",
+    "expo-constants": "~17.0.8",
+    "expo-device": "~7.0.3",
     "expo-file-system": "^18.0.12",
     "expo-image-picker": "^16.0.6",
+    "expo-notifications": "~0.29.14",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.6.0",
+    "jsonwebtoken": "^9.0.2",
     "nanoid": "^5.1.4",
+    "prop-types": "^15.8.1",
     "react": "18.3.1",
-    "react-native": "^0.76.7",
+    "react-is": "^18.2.0",
+    "react-native": "^0.76.9",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
