--- a/app.json
+++ b/app.json
@@ -18,7 +18,9 @@
     "android": {
       "package": "com.rutinas.firetive",
       "googleServicesFile": "./google-services.json",
-      "permissions": ["android.permission.POST_NOTIFICATIONS"],
+      "permissions": [
+        "android.permission.POST_NOTIFICATIONS"
+      ],
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -29,9 +31,9 @@
     },
     "extra": {
       "eas": {
-        "projectId": "afd5a451-dded-4fa3-8444-fce977daf760"
+        "projectId": "0647dafd-20ce-468c-84b7-333a6876b2af"
       }
     },
-    "owner": "shadowblood"
+    "owner": "mao2q"
   }
 }
