--- a/proyectoaula/package.json
+++ b/proyectoaula/package.json
@@ -15,15 +15,19 @@
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
-    "expo": "~52.0.37",
+    "date-fns": "^4.1.0",
+    "expo": "^52.0.0",
     "expo-image-picker": "~16.0.6",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.3.1",
-    "react": "18.3.1",
-    "react-native": "0.76.7",
+    "lottie-react-native": "7.2.2",
+    "react": "^18.2.0",
+    "react-native": "^0.73.6",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-paper": "^5.13.1",
+    "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-paper": "^5.14.4",
+    "react-native-paper-dates": "^0.22.42",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
