--- a/book-exchange-community/package.json
+++ b/book-exchange-community/package.json
@@ -9,32 +9,39 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.1",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/checkbox": "^0.5.17",
+    "@expo/metro-runtime": "~5.0.4",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
-    "expo": "~52.0.46",
+    "expo": "^53.0.9",
     "expo-blur": "^14.0.3",
-    "expo-camera": "~16.0.18",
-    "expo-image-picker": "~16.0.6",
-    "expo-location": "~18.0.10",
-    "expo-status-bar": "~2.0.1",
-    "firebase": "^11.4.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-maps": "1.18.0",
+    "expo-camera": "~16.1.6",
+    "expo-constants": "~17.1.6",
+    "expo-dev-client": "~5.1.8",
+    "expo-device": "~7.1.4",
+    "expo-image-picker": "~16.1.4",
+    "expo-location": "~18.1.5",
+    "expo-notifications": "~0.31.2",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "^5.0.7",
+    "firebase": "^11.8.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gifted-chat": "^2.8.1",
+    "react-native-keyboard-controller": "^1.17.2",
+    "react-native-maps": "1.20.1",
     "react-native-paper": "^5.13.1",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "~3.17.4",
     "react-native-reanimated-carousel": "^4.0.2",
-    "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "^0.20.0",
+    "text-encoding-polyfill": "^0.6.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
